# LiveCapture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
libs/DeckLinkSDK12/: DeckLinkAPIDeckControl.h
libs/Linux/: platform.h
libs/opencv-3.3.0/modules/videoio/src/: cap_ffmpeg_impl.hpp
src/Capture/: Capture.cpp  Config.cpp  Config.h  server.py
src/DeckLinkIterator/: main.cpp
src/Decklink_opencv/: DeviceManager.h  LiveVideoWithOpenCV.cpp  LiveVideoWithOpenCV.h  com_ptr.h  com_utils.h
src/GeneratePattern/: Config.cpp  TestPattern.cpp
src/OpenCVExample/: main.cpp
src/ScheduledPlayback/: main.cpp
src/VideoStreaming/: Client.cpp  Client.h  Config.cpp  Config.h  Server.py
src/ZMQ_OpenCV/: client.cpp  server.py
src/examples/LiveVideoWithOpenCV/: LiveVideoWithOpenCV.cpp
